git update mapas de veterinaria con google static maps api

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -254,7 +254,8 @@
                         android:layout_columnWeight="1"
                         android:layout_margin="12dp"
                         app:cardCornerRadius="20dp"
-                        app:cardElevation="21dp">
+                        app:cardElevation="21dp"
+                        android:onClick="veterinarias">
 
                         <LinearLayout
                             android:layout_width="match_parent"
